...
        child: Column(crossAxisAlignment: CrossAxisAlignment.start, children: [
          Container(
            width: double.maxFinite,
            color: Colors.amber,
            padding: const EdgeInsets.all(15.0),
            child: const Text(
              'My cart',
              style: TextStyle(fontSize: 20, fontWeight: FontWeight.bold),
            ),
          ),
          Consumer<StoreViewModel>(builder: ((context, value, child) {
            return Expanded(
              child: ListView.builder(
...
